# Km3Kit

./: .gitignore  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.md  README.rst  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
Data/: DF.yml
Data/aanet51/: genhen_JUNE_2___.hist.root  numucc.evt
doc/: conf.py
docs/: Makefile  common.md  conf.py  contributing.md  index.md  index.rst  installation.md  installation.rst  km3kit.md  make.bat  usage.md  usage.rst
km3kit/: .coveragerc  .gitignore  CONTRIBUTING.rst
km3kit/Tools/: IO.py
km3kit/doc/: index.rst
km3kit/examples/: plot_calculator.py
km3kit/utils/: IO.py
src/: Km3Kit.py
src/Km3Kit/: Km3Kit.py  __init__.py  cli.py  main.py  temp_test.py  test.py
src/Km3Kit/IO/: DST.py  __init__.py  fitsio.py  hdf5io.py  io.py  rootio.py  writers.py  yml_Loader.py
src/Km3Kit/ana/: __init__.py
src/Km3Kit/ana/IRFs/: Plot_IRFs.py  __init__.py  create_IRFs.py  (+1 more)
src/Km3Kit/config/: Config.yml  branches.yml  dataset_registry.yml  fits_configs.yml
src/Km3Kit/examples/: Km3Kit-overview.ipynb  ReadEvents.ipynb
src/Km3Kit/plugins/: Gpyio.py  __init__.py
src/Km3Kit/utils/: __init__.py  config_loader.py  tools.py  yaml_utils.py  yml_Loader.py  yml_utils.py
src/km3kit/: __init__.py
src/km3kit/IO/: io.py  rootio.py  writers.py  yml_Loader.py
src/km3kit/config/: dataset_registry.yml
src/km3kit/utils/: io_utils.py  readers.py
tests/: __init__.py  test_Km3Kit.py  test_calc.py
(+8 files in other folders)
