[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "km3kit"
version = "0.0.1"
description = "A Python package for cosmic neutrino analysis with KM3NeT data."
readme = "README.rst"
authors = [
  {name = "Amid Nayerhoda", email = "anayerhoda@km3net.de"}
]
maintainers = [
  {name = "Amid Nayerhoda", email = "anayerhoda@km3net.de"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/Amidn/km3kit/issues"
changelog = "https://github.com/Amidn/km3kit/blob/master/changelog.md"
homepage = "https://github.com/Amidn/km3kit"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

